[gd_scene load_steps=6 format=3 uid="uid://byy3lrs3wk87q"]

[ext_resource type="Script" path="res://game_scenes/home_screen/home_screen.gd" id="1_0dgku"]
[ext_resource type="PackedScene" uid="uid://c0bngicr1p4w0" path="res://game_scenes/prompts_screen/starting_prompts.tscn" id="1_xo1g2"]
[ext_resource type="Script" path="res://Label.gd" id="2_pbnx2"]
[ext_resource type="Theme" path="res://pixel font/mid_font_theme.tres" id="3_j5dr0"]
[ext_resource type="PackedScene" uid="uid://dfncvobr4liih" path="res://game_scenes/game_screen/game_screen.tscn" id="5_v2ldq"]

[node name="HomeScreen" type="Node2D"]
script = ExtResource("1_0dgku")

[node name="starting_prompts" parent="." instance=ExtResource("1_xo1g2")]
visible = false

[node name="CTT_title" type="Label" parent="."]
texture_filter = 1
offset_left = 291.0
offset_top = 59.0
offset_right = 321.0
offset_bottom = 85.0
theme = ExtResource("3_j5dr0")
theme_override_font_sizes/font_size = 12
script = ExtResource("2_pbnx2")

[node name="game_screen" parent="." instance=ExtResource("5_v2ldq")]
